# compliance

./: .codespellrc  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  anthropic_api.py  app.py  create_tables.py  docker-compose.yaml  pyproject.toml  requirements.txt  run_site_analysis_evals.py  schemas.py
.github/workflows/: ci.yaml  codeql.yaml  pages.yaml  publish.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 019695f0ffda_add_user_auth_roles_and_inspectors_to_.py  0bb2da337c8e_add_file_name_to_attachments.py  0eefc6ce8746_make_regulations_desc_and_pub_date_not_nullable.py  1b5fa38b3284_add_archived_at_and_archive_reason_to_.py  1dd66f244dea_remove_file_type_from_attachments.py  561e6f89ce9e_make_uploaded_at_nullable_in_attachments.py  63e611c60280_rename_legacy_constraints_to_metadata_.py  68c51a10a015_initial_schema.py  68c51a10a015_make_rules_description_non_nullable.py  6ddc8fb3aa53_change_uploaded_at_to_timezone_aware_utc.py  7c6a0b8f4d2e_make_attachment_file_path_nullable.py  be69efd1411e_add_unique_constraint_to_users_email_.py  c6d04b12b67d_align_finding_attachment_foreign_keys.py  e9ecd6a43dad_change_archived_at_to_timezone_aware_utc.py
backend/src/compliance/: __init__.py  _helpers.py  app.py  cli.py  config.py  logging_utils.py  schemas.py
backend/src/compliance/api/: __init__.py  deps.py  main.py  schemas.py
backend/src/compliance/auth/: authentication.py  authorization.py  passwords.py  tokens.py
backend/src/compliance/db/: __init__.py  db_access.py  models.py
backend/src/compliance/llm/: __init__.py  anthropic_api.py  schemas.py
backend/src/compliance/services/: _helpers.py  attachments.py  certifications.py  certifiers.py  clients.py  findings.py  lifecycle.py  regulations.py  rules.py  schemas.py  site_analysis.py  sites.py  users.py
backend/tests/: conftest.py  test_cli.py  test_config.py  test_helpers.py  test_logging_utils.py
backend/tests/api/: conftest.py  test_api_schemas.py  test_health.py  test_main.py
backend/tests/api/routers/: conftest.py  test_attachments.py  test_auth.py  test_certifications.py  test_certifiers.py  test_rules.py  (+5 more)
backend/tests/auth/: conftest.py  test_authentication.py  test_authorization.py  test_passwords.py  test_tokens.py
backend/tests/db/: test_db_access.py  test_models.py
backend/tests/llm/: run_site_analysis_evals.py  test_anthropic_api.py
backend/tests/services/: conftest.py  test_attachment_services.py  test_certification_services.py  test_certifier_services.py  test_client_services.py  test_finding_services.py  test_helpers_services.py  test_regulation_services.py  test_rule_services.py  test_schemas.py  test_site_analysis.py  test_site_services.py  test_user_services.py
docker/: .env.example  Dockerfile  backend.Dockerfile  frontend.Dockerfile
docs/: backend-flow.md  conf.py  index.rst  python_api.rst  requirements.txt
evals/site_history_cases/conflicting_looking_pattern/: expected.json
evals/site_history_cases/dense_history/: expected.json  input_site_history.json
evals/site_history_cases/in_progress_certification/: expected.json  input_site_history.json
evals/site_history_cases/missing_finding/: expected.json
evals/site_history_cases/missing_resolution_date/: expected.json
evals/site_history_cases/no_findings/: expected.json  input_site_history.json
evals/site_history_cases/normal_clean_history/: expected.json  input_site_history.json
evals/site_history_cases/repeated_rule_across_certifications/: expected.json
evals/site_history_cases/single_certification/: expected.json
evals/site_history_cases/thin_history/: expected.json
examples/demo/: README.md  seed_demo_data.sql  seed_demo_data.sql:mshield
examples/demo/results/: site-71-analysis.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: admin-attachments.spec.ts  site-workflow.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/api/: complianceApi.ts
frontend/src/components/: AnalysisPanel.tsx  AttachmentsPanel.tsx  MarkdownPanel.tsx  SiteHistoryPanel.tsx  SiteSearchPanel.tsx
frontend/src/utils/: adminFormatters.test.ts  adminFormatters.ts  apiErrors.test.ts  apiErrors.ts  formatSiteAnalysisMarkdown.test.ts  formatSiteAnalysisMarkdown.ts
frontend/test-results/: .last-run.json
frontend/tests/e2e/: admin-attachments.spec.ts  auth-dialog.spec.ts
migrations/: script.py.mako
migrations/versions/: 14c5bde199e1_add_archived_at_to_attachments.py  68c51a10a015_make_rules_description_non_nullable.py  9e77d299bc33_change_attachments_uploaded_at_to_.py  ae8d79ecdd74_add_archive_reason_to_attachments.py
src/compliance/: _helpers.py  app.py  cli.py  logging_utils.py  schemas.py
src/compliance/api/: deps.py  main.py  schemas.py
src/compliance/db/: db_access.py  models.py  query_history.py
src/compliance/llm/: anthropic_api.py  schemas.py
src/compliance/services/: _helpers.py  attachments.py  certifications.py  certifiers.py  clients.py  findings.py  query_db.py  query_history.py  records.py  regulations.py  reports.py  rules.py  site_analysis.py  sites.py
tests/: conftest.py  test_helpers.py
tests/api/: test_main.py
tests/api/routers/: conftest.py  test_attachments.py  test_certifications.py  test_certifiers.py  test_clients.py  test_findings.py  test_regulations.py  test_rules.py  test_sites.py
tests/db/: test_db_access.py  test_query_history.py
tests/llm/: run_site_analysis_evals.py  test_anthropic_api.py
tests/services/: conftest.py  test_attachment_services.py  test_certification_services.py  test_certifier_services.py  test_client_services.py  test_clients.py  test_db_access.py  test_finding_services.py  test_helpers_services.py  test_query_db.py  test_query_history.py  test_records.py  test_regulation_services.py  test_reports.py  test_rule_services.py  test_site_analysis.py  test_site_services.py
(+62 files in other folders)
