[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance"
version = "0.1.0"
description = "Inspection and compliance management system."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Elliott Bache", email = "elliottbache@gmail.com" }
]
keywords = ["database", "compliance", "AI", "LLM"]

# Runtime deps
dependencies = [
  "pydantic",
  "anthropic",
  "sqlalchemy",
  "psycopg2-binary",
  "python-dotenv",
]

# Optional extras for dev tools
[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "sphinx>=9.1.0",
  "sphinx-autodoc-typehints",
  "sphinx_rtd_theme",
  "myst-parser>=5.0.0",
  "pre-commit",
  "ruff==0.15.11",
  "black==26.3.1",  # same as pre-commit
  "isort",
  "mypy==1.20.1",
  "codespell==2.4.2",
  "pytest-cov",
  "spacy",
]

[project.scripts]
compliance = "compliance.app:main"

[tool.setuptools]
# Tell setuptools that packages live under `src/`
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
compliance = []

[project.urls]
Homepage = "https://github.com/elliottbache/compliance"
Source = "https://github.com/elliottbache/compliance"
Issues = "https://github.com/elliottbache/compliance/issues"
Documentation = "https://elliottbache.github.io/compliance/"

# pyproject.toml
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
ignore = ["E203", "E501"]  # let the formatter handle wrapping
fixable = ["I", "E","UP","SIM","PERF","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "^(migrations|build|dist|.venv|_deps)/"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.codespell]
skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./src/include,./docs/_static,pyproject.toml,./build*,./htmlcov"
ignore-words-list = "teh,nd,seh,atleast,atmost,deques,ser,requeried"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-q",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=85"
]