[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance"
version = "0.1.0"
description = "Inspection and compliance management system."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Elliott Bache", email = "elliottbache@gmail.com" }
]
keywords = ["database", "compliance", "AI", "LLM"]

dependencies = [
  "pydantic==2.10.6",
  "anthropic==0.96.0",
  "sqlalchemy==2.0.38",
  "psycopg2-binary==2.9.10",
  "python-dotenv==1.0.1",
  "fastapi[standard]==0.129.2",
  "python-multipart==0.0.20",
  "alembic==1.18.4"
]

# Optional extras for dev tools
[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "sphinx==8.0.2",
  "sphinx-autodoc-typehints==2.5.0",
  "sphinx_rtd_theme==3.0.2",
  "myst-parser==4.0.0",
  "pre-commit==4.1.0",
  "ruff==0.14.14",
  "black==24.10.0",  # Pinned to stay in sync with your pre-commit
  "isort==6.0.0",
  "mypy==1.14.1",
  "codespell==2.4.1",
  "pytest-cov==6.0.0",
  "spacy==3.8.3",
  "httpx==0.28.1",
]

[tool.setuptools]
# Tell setuptools that packages live under `backend/src/`
package-dir = { "" = "backend/src" }

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.setuptools.package-data]
compliance = []

[project.urls]
Homepage = "https://github.com/elliottbache/compliance"
Source = "https://github.com/elliottbache/compliance"
Issues = "https://github.com/elliottbache/compliance/issues"
Documentation = "https://elliottbache.github.io/compliance/"

# pyproject.toml
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
ignore = ["E203", "E501"]  # let the formatter handle wrapping
fixable = ["I", "E","UP","SIM","PERF","RUF"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "^(migrations|build|dist|.venv|_deps)/"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["backend/src"]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["backend/src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.codespell]
skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./backend/src/include,./docs/_static,pyproject.toml,./build*,./backend/htmlcov,./htmlcov,./frontend/node_modules,./frontend/package-lock.json,./frontend/dist,./frontend/playwright-report,./examples/demo,./backend/storage/attachments"
ignore-words-list = "teh,nd,seh,atleast,atmost,deques,ser,requeried"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
addopts = [
  "-q",
  "--cov=backend/src",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=85"
]

[tool.alembic]
script_location = "backend/migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

